api/v1/anime
